# danktunes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CLEANUP_FINAL.md  README.md  TODO.md  danktunes.py  danktunes.toml  ideas.md  logging_config.py  manpage.txt  play.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
dev_stuff/: agent_description.md  feature_suggestions.md  phases.md
dev_stuff/slop commands/: cleanup_and_optimize.md  next_phase.md
src/: __init__.py  audio.py  config.py  state.py
tests/: conftest.py  test_album_art.py  test_features.py  test_m3u.py  test_persistence.py  test_playlist.py  test_scan.py  test_state.py  test_terminal_images.py
